--- a/dashboard.html
+++ b/dashboard.html
@@ -1,441 +1,34 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Dashboard - St. Patrick's Progress Card App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="St. Patrick’s School Dashboard for managing IIT & NEET Foundation student progress">
-  <meta property="og:title" content="St. Patrick’s School Dashboard">
-  <meta property="og:description" content="Manage student progress for IIT & NEET Foundation at St. Patrick’s School">
-  <meta property="og:image" content="/logo.png">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' https://cdnjs.cloudflare.com; img-src 'self' data:;">
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="dashboard">
-  <noscript>
-    <div style="text-align: center; padding: 20px;">
-      <p>JavaScript is required to use this application. Please enable JavaScript in your browser settings.</p>
+   <div class="fixed-header" id="header">
+    <div class="school-title" id="school-title">
+      <span>S</span><span>t</span><span>.</span><span>P</span><span>a</span><span>t</span><span>r</span><span>i</span><span>c</span><span>k</span><span>'</span><span>s</span><span>S</span><span>c</span><span>h</span><span>o</span><span>o</span><span>l</span>
     </div>
-  </noscript>
-  <div class="fixed-header" id="header" role="banner">
-    <div class="school-title" id="school-title">St. Patrick’s School</div>
     <div class="subtitle" id="header-subtitle">IIT & NEET FOUNDATION</div>
-    <div class="subtitle" id="header-exam"></div>
+    <div class="subtitle" id="header-exam" style="font-weight:600;"></div>
   </div>
-  <div class="main-content" id="main-area" role="main"></div>
-  <button class="fab" id="fab" title="Add" aria-label="Add new item"><i class="fas fa-plus"></i></button>
-  <button class="settings-btn" id="settings-btn" title="Settings" aria-label="Open settings"><i class="fas fa-cog"></i></button>
-  <div id="popup-bg" class="hidden" role="dialog" aria-hidden="true"></div>
-  <div id="popup" class="hidden" role="dialog" aria-hidden="true"></div>
-  <input type="file" id="memo-img-upload" accept="image/png" class="hidden" aria-hidden="true" />
+  <div class="main-content" id="main-area"></div>
+  <button class="fab" id="fab" title="Add"></button>
+  <button class="settings-btn" id="settings-btn" title="Settings"><i class="fa fa-cog"></i></button>
+  <div id="popup-bg" class="hidden"></div>
+  <div id="popup" class="hidden"></div>
+  <input type="file" id="memo-img-upload" accept="image/png" style="display:none;" />
 
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js" defer></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js" defer></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js" defer></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js" defer></script>
-  <script src="/app.js" defer></script>
+  <!-- All scripts below (ORDER IS IMPORTANT) -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <script src="app.js"></script>
 </body>
-</html امید
-
-<xaiArtifact artifact_id="9c537ebb-6172-45bb-96d3-c5b75d410c23" artifact_version_id="b89e7ea7-6a57-401f-abdd-3830ce8c5474" title="style.css" contentType="text/css">
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', Arial, sans-serif;
-  background: #f4f8fc;
-  min-height: 100vh;
-  min-width: 100vw;
-  overflow-x: hidden;
-}
-.splash {
-  position: fixed;
-  z-index: 9999;
-  left: 0; top: 0; right: 0; bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #eaf1fa;
-  transition: opacity 0.5s;
-}
-.splash-logo {
-  width: 150px;
-  margin-bottom: 18px;
-}
-.splash-title {
-  font-size: 2.1em;
-  font-weight: bold;
-  margin-bottom: 6px;
-  color: #0f3d6b;
-}
-.splash-subtitle {
-  font-size: 1.15em;
-  color: #1467b7;
-}
-.school-title {
-  font-size: 1.6em;
-  font-weight: bold;
-  text-align: center;
-  color: #0f3d6b;
-  letter-spacing: 1.5px;
-  margin-bottom: 4px;
-}
-.subtitle {
-  text-align: center;
-  font-size: 1.05em;
-  color: #1762a7;
-  font-weight: 500;
-  margin-bottom: 0.6em;
-}
-#login-root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-}
-.login-box {
-  width: 96vw;
-  max-width: 350px;
-  margin: 0 auto;
-  background: #fff;
-  border-radius: 18px;
-  box-shadow: 0 6px 24px #0f3d6b14;
-  padding: 26px 18px 20px 18px;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  gap: 12px;
-}
-.login-box input {
-  padding: 10px 12px;
-  font-size: 1.08em;
-  margin-bottom: 7px;
-  border-radius: 6px;
-  border: 1.3px solid #bcd6ef;
-  background: #f7fafd;
-  transition: border-color .2s;
-}
-.login-box input:focus { outline: none; border-color: #0f3d6b; }
-.btn-email, .btn-register, .btn-google {
-  font-size: 1em;
-  border: none;
-  padding: 12px 0;
-  border-radius: 8px;
-  margin-top: 6px;
-  font-weight: bold;
-  background: #1762a7;
-  color: #fff;
-  cursor: pointer;
-  margin-bottom: 3px;
-  transition: background 0.17s;
-}
-.btn-register { background: #1db954; }
-.btn-google { background: #1762a7; color: #fff; }
-.btn-google i { margin-right: 7px; }
-.forgot-row {
-  display: flex;
-  justify-content: flex-end;
-}
-.forgot-row button {
-  background: none;
-  border: none;
-  color: #0f3d6b;
-  font-size: .92em;
-  cursor: pointer;
-  text-decoration: underline;
-  margin-bottom: 3px;
-}
-.fixed-header {
-  background: #0f3d6b;
-  color: #fff;
-  text-align: center;
-  padding: 18px 0 8px 0;
-  border-bottom-left-radius: 14px;
-  border-bottom-right-radius: 14px;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-.fixed-header .school-title { color: #fff; font-size: 1.5em; margin: 0; }
-.fixed-header .subtitle { color: #c9e4ff; font-size: .99em; font-weight: 400; margin: 0; }
-.fixed-header #header-exam {
-  font-size: 1.13em; font-weight: bold; color: #fdc600; margin: 6px 0 0 0;
-}
-.main-content {
-  padding: 18px 10px 80px 10px;
-  max-width: 510px;
-  margin: 0 auto;
-  min-height: 60vh;
-}
-.screen-title {
-  font-size: 1.4em;
-  font-weight: bold;
-  text-align: left;
-  color: #0f3d6b;
-  margin-bottom: 12px;
-  margin-top: 18px;
-  letter-spacing: 0.5px;
-}
-.class-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
-  gap: 10px 8px;
-  justify-items: center;
-  align-items: center;
-}
-.section-list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
-  margin-top: 14px;
-  margin-left: 12px;
-}
-.student-list {
-  display: flex;
-  flex-direction: column;
-  gap: 0px;
-}
-.section-chip {
-  width: 96vw;
-  max-width: 400px;
-  min-height: 44px;
-  padding: 13px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 9px;
-  background: #f7fafd;
-  font-size: 1.13em;
-  font-weight: 600;
-  color: #0f3d6b;
-  cursor: pointer;
-  box-shadow: 0 2px 10px #0f3d6b12;
-  text-align: left;
-  transition: background 0.16s, box-shadow 0.12s, transform 0.16s;
-  display: flex;
-  align-items: center;
-}
-.class-btn {
-  min-width: 130px;
-  min-height: 48px;
-  padding: 8px 0;
-  border-radius: 24px;
-  border: 2.7px solid #0f3d6b;
-  background: #fff;
-  font-size: 1.18em;
-  font-weight: 700;
-  color: #0f3d6b;
-  cursor: pointer;
-  box-shadow: 0 2px 12px #0f3d6b0a;
-  transition: transform 0.16s, border 0.13s, box-shadow 0.16s;
-  margin-bottom: 2px;
-  text-align: center;
-  letter-spacing: 0.5px;
-}
-.interactive-hover:hover {
-  transform: translateY(-2px) scale(1.035);
-  border-width: 3.2px;
-  box-shadow: 0 4px 22px #1467b71a;
-}
-.section-chip:hover { background: #eaf1fa; }
-.student-row {
-  background: #fff;
-  border-radius: 12px;
-  padding: 10px 16px;
-  margin-bottom: 7px;
-  box-shadow: 0 1px 5px #0f3d6b15;
-  font-size: 1.09em;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.roll-no {
-  display: inline-block;
-  min-width: 30px;
-  font-weight: bold;
-  color: #1467b7;
-}
-.fab, .settings-btn {
-  position: fixed;
-  right: 22px;
-  border: none;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  background: #0f3d6b;
-  color: #fff;
-  box-shadow: 0 2px 18px #0f3d6b55;
-  transition: background 0.15s;
-}
-.fab {
-  width: 56px;
-  height: 56px;
-  bottom: 92px;
-  z-index: 104;
-}
-.settings-btn {
-  width: 46px;
-  height: 46px;
-  font-size: 1.35em;
-  bottom: 34px;
-  z-index: 103;
-}
-.settings-btn i { pointer-events: none; }
-#popup-bg {
-  position: fixed;
-  left: 0; top: 0; right: 0; bottom: 0;
-  background: #0007;
-  z-index: 2001;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#popup-bg.hidden, #popup.hidden { display: none !important; }
-.popup, #popup {
-  background: #fff;
-  border-radius: 22px;
-  box-shadow: 0 10px 36px #0f3d6b22;
-  padding: 30px 22px 22px 22px;
-  max-width: 380px;
-  width: 92vw;
-  margin: 0 auto;
-  position: relative;
-  z-index: 2010;
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
-  align-items: stretch;
-  justify-content: center;
-}
-.popup label, .popup-title {
-  font-size: 1.11em;
-  color: #1a3760;
-  font-weight: 600;
-  margin-bottom: 8px;
-}
-.popup input,
-.popup select {
-  padding: 10px 12px;
-  font-size: 1.07em;
-  margin-bottom: 10px;
-  border-radius: 7px;
-  border: 1.3px solid #c7d7ea;
-  background: #f7fafd;
-  transition: border-color .2s;
-}
-.popup input:focus, .popup select:focus { outline: none; border-color: #0f3d6b; }
-.btn-row {
-  display: flex;
-  justify-content: flex-end;
-  gap: 8px;
-}
-.popup .cancel-btn {
-  background: #e0e0e0;
-  color: #444;
-  font-weight: 500;
-  border: none;
-  border-radius: 8px;
-  padding: 11px 20px;
-  cursor: pointer;
-  transition: background 0.14s;
-}
-.popup .action-btn {
-  background: #0f3d6b;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  padding: 11px 20px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.14s;
-}
-.popup .action-btn:hover { background: #195084; }
-.option-row {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.option-btn {
-  background: #1762a7;
-  color: #fff;
-  border: none;
-  border-radius: 7px;
-  padding: 11px 0;
-  font-size: 1.09em;
-  font-weight: 500;
-  width: 100%;
-  cursor: pointer;
-  transition: background 0.13s;
-}
-.option-btn:hover { background: #0f3d6b; }
-::-webkit-scrollbar {
-  width: 8px;
-  background: #f4f8fc;
-}
-::-webkit-scrollbar-thumb {
-  background: #0f3d6b;
-  border-radius: 4px;
-}
-body:not(.dashboard) .fab, .hidden {
-  display: none !important;
-}
-@media (max-width: 600px) {
-  .class-list {
-    grid-template-columns: 1fr;
-  }
-  .popup {
-    width: 90vw;
-  }
-}
-@media (min-width: 768px) {
-  .main-content {
-    max-width: 700px;
-  }
-}
+</html>
