--- a/dashboard.html
+++ b/dashboard.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Dashboard - St. Patrick's Progress Card App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <title>Dashboard - St. Patrick's Progress Card App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="dashboard">
-   <div class="fixed-header" id="header">
-    <div class="school-title" id="school-title">
-      <span>S</span><span>t</span><span>.</span><span>P</span><span>a</span><span>t</span><span>r</span><span>i</span><span>c</span><span>k</span><span>'</span><span>s</span><span>S</span><span>c</span><span>h</span><span>o</span><span>o</span><span>l</span>
+    <div class="fixed-header" id="header">
+        <div class="school-title" id="school-title">
+            <span>S</span><span>t</span><span>.</span><span>P</span><span>a</span><span>t</span><span>r</span><span>i</span><span>c</span><span>k</span><span>'</span><span>s</span><span>S</span><span>c</span><span>h</span><span>o</span><span>o</span><span>l</span>
+        </div>
+        <div class="subtitle" id="header-subtitle">IIT & NEET FOUNDATION</div>
+        <div class="subtitle" id="header-exam" style="font-weight:600;"></div>
     </div>
-    <div class="subtitle" id="header-subtitle">IIT & NEET FOUNDATION</div>
-    <div class="subtitle" id="header-exam" style="font-weight:600;"></div>
-  </div>
-  <div class="main-content" id="main-area"></div>
-  <button class="fab" id="fab" title="Add"></button>
-  <button class="settings-btn" id="settings-btn" title="Settings"><i class="fa fa-cog"></i></button>
-  <div id="popup-bg" class="hidden"></div>
-  <div id="popup" class="hidden"></div>
-  <input type="file" id="memo-img-upload" accept="image/png" style="display:none;" />
+    <div class="main-content" id="main-area"></div>
 
-  <!-- All scripts below (ORDER IS IMPORTANT) -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-  <script src="app.js"></script>
+    <button class="fab" id="fab" title="Add">
+        <i class="fa-solid fa-plus"></i>
+    </button>
+    <button class="settings-btn" id="settings-btn" title="Settings">
+        <i class="fa fa-cog"></i>
+    </button>
+
+    <div id="popup-bg" class="hidden">
+        <div id="popup" class="popup"></div>
+    </div>
+
+    <div id="message-popup-bg" class="hidden">
+        <div id="message-popup" class="popup">
+            <h3 id="message-popup-title" class="popup-title"></h3>
+            <p id="message-popup-content"></p>
+            <div class="btn-row">
+                <button class="cancel-btn" id="message-popup-ok-btn">OK</button>
+            </div>
+        </div>
+    </div>
+
+    <input type="file" id="memo-img-upload" accept="image/png" style="display:none;" />
+
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
